mobile size logo

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
     <!---------Header---------->
     <section class="header text-box" id="header">
+        <img src="img/ecofiber-small-logo-black.png">
     </section>
 
     <!---------About---------->
