--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         </h1>
         <div class="about-content">
             <div class="about-right">
-                - ECO FIBER IS RECYCLED POLYESTER STAPLE FIBER DISTRIBUTOR IN CANADA<br><br>
-                - PARTNER WITH NO.1 COLOR FIBER PRODUCER IN KOREA<br><br>
-                - GLOBAL RECYCLED STANDARD (GRS) & OEKO-TEX STANDARD 100<br><br>
-                - SPECIALIZED IN AUTOMOTIVE INTERIOR MATERIALS
+                ECO FIBER IS RECYCLED POLYESTER STAPLE FIBER DISTRIBUTOR IN CANADA<br><br>
+                PARTNER WITH NO.1 COLOR FIBER PRODUCER IN KOREA<br><br>
+                GLOBAL RECYCLED STANDARD (GRS) & OEKO-TEX STANDARD 100 CERTIFIED PRODUCT<br><br>
+                SPECIALIZED IN AUTOMOTIVE INTERIOR MATERIALS
             </div>
             <div class="about-left">
                 <img src="img/about.png" alt="about">
@@ -69,14 +69,61 @@
         <h1 class="products-header">PRODUCTS
         </h1>
         <div class="product1">
+            <p>RECYCLED POLYESTER STAPLE FIBER</p>
+            <div class="texts psf">
+                <div>
+                    Polyester staple fiber (PSF) is a synthetic fiber derived from polyester polymer, mainly sourced from petrochemicals. PSF is produced in short lengths and widely used in various textile applications due to its versatility and advantageous properties. It contributes significantly to the textile industry, offering a cost-effective and sustainable alternative to natural fibers while meeting diverse consumer needs.
+                </div>
+            </div>
+            <div class="fiber-content">
+                
+                <img src="img/fiber.png" class="img-content">
+                <div class="text-content">
+                    <div class="texts composition">
+                        ◎ Composition: Polyester staple fiber consists of long chains of synthetic polymers, specifically polyethylene terephthalate (PET), derived from petrochemical sources through polymerization.
+                    </div>
+                    <div class="texts">
+                        ◎ Properties: Key properties of polyester staple fiber include:
+                        <div class="properties">
+                            ○ Strength and Durability: PSF exhibits high tensile strength, ensuring longevity in various applications.
+                        </div>
+                        <div class="properties">
+                            ○ Wrinkle and Shrink Resistance: Fabrics made from PSF retain their shape and size, requiring minimal care.
+                        </div>
+                        <div class="properties">
+                            ○ Quick Drying: Low moisture absorption enables rapid drying, ideal for activewear and outdoor applications.
+                        </div>
+                        <div class="properties">
+                            ○ Resistance to Mildew and Abrasion: PSF is resilient against mildew and abrasion, suitable for demanding environments.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="psf-text">
+                Recycled polyester staple fiber plays a pivotal role in textile industry sustainability by embracing recycling and utilizing recycled PET to produce durable, adaptable fibers for various uses, thus reducing environmental impact and promoting circularity. Recycling initiatives effectively divert post-consumer plastic waste from landfills, conserving resources and minimizing the need for virgin materials. Furthermore, ongoing improvements in sustainable manufacturing practices aim to reduce energy consumption and emissions, contributing to a greener textile industry overall.
+            </div>
+        </div>
+        <div class="product2">
             <p>ITEM LIST</p>
             <img src="img/item.png">
         </div>
-        <div class="product2">
+        <div class="product3">
             <p>APPLICATION</p>
+            <div class="text-content">
+                Polyester staple fiber finds extensive use in:
+                <div class="application">
+                    ◎ Textiles: It is employed in apparel, home furnishings, and technical textiles, often blended with other fibers for enhanced performance.
+                </div>
+                <div class="application">
+                    ◎ Non-woven Fabrics: PSF is integral to non-woven products like filtration materials, hygiene products, and medical supplies, contributing to sustainability through the use of recycled materials.
+                </div>
+                <div class="application">
+                    ◎ Industrial Applications: Its strength makes it suitable for industrial products such as ropes, tire cord, and conveyor belts, with an increasing focus on incorporating recycled content in manufacturing processes.
+                </div>
+            </div>
             <img src="img/application.png">
         </div>
-        <div class="product3">
+        <div class="product4">
             <p>CUSTOMIZATION</p>
             <img src="img/customization.png">
         </div>
@@ -87,7 +134,11 @@
         <h1 class="process-header">PROCESS
         </h1>
         <div class="row1">
-            <div class="col1-left">
+            <p>PRODUCTION PROCESS</p>
+            <div class="process-content">
+                PSF production involves melting PET chips or pellets and extruding them through spinnerets to form continuous filaments. These filaments are then cut into shorter lengths, creating staple fibers. Notably, a significant emphasis is placed on utilizing recycled PET (rPET), sourced from post-consumer plastic waste, thus reducing environmental impact and promoting circularity.
+            </div>
+            <div>
                 <img src="img/process.png">
             </div>
         </div>
@@ -103,13 +154,7 @@
         </h1>
         <div class="sns">
             <div>
-                Kyle Kim [Co-Founder]: <a href="mailto:kylekim@ecofibersystem.com">kylekim@ecofibersystem.com</a>
-            </div>
-            <div>
-                Tony Shen [Co-Founder]: <a href="mailto:sooyeoncheon.dev@gmail.com">tshen@ecofibersystem.com</a>
-            </div>
-            <div>
-                Jungsoo Kim [Co-Founder]: <a href="mailto:sooyeoncheon.dev@gmail.com">jkim@ecofibersystem.com</a>
+                Email : <a href="mailto:info@ecofibersystem.com">info@ecofibersystem.com</a>
             </div>
         </div>
     </section>
