--- a/index.html
+++ b/index.html
@@ -148,7 +148,26 @@
 
     <!---------footer---------->
     <section class="footer" id="contact">
-        <h1 class="contact-me">
+        <div class="contact-1">
+            <img src="img/ecofiber-small-logo.png">
+            <p>Ecofiber System </p>
+            <p><a href="mailto:info@ecofibersystem.com">info@ecofibersystem.com</a></p>
+            <p><a href="tel:1-778-222-1175">+1(778)222-1175</a></p>
+        </div>
+        
+        <div class="contact-2">
+            <h1>Main Office</h1>
+            <div>
+                <p>7455 Moffatt Rd</p>
+                <p>Richmond, BC V6Y 1X9,</p>
+                <p>Canada</p>
+            </div>
+        </div>
+        
+        <div class="contact-3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.2365673660115!2d-123.14809412417642!3d49.15811777137433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54860ab9af96a22b%3A0x3aef6bae4b3a72c0!2s7455%20Moffatt%20Rd%2C%20Richmond%2C%20BC%20V6Y%201X9!5e0!3m2!1sen!2sca!4v1708920458457!5m2!1sen!2sca"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <!-- <h1 class="contact-me">
             CONTACT
             <p>Feel free to contact me if you are interested in working with me.</p>
         </h1>
@@ -156,7 +175,7 @@
             <div>
                 Email : <a href="mailto:info@ecofibersystem.com">info@ecofibersystem.com</a>
             </div>
-        </div>
+        </div> -->
     </section>
 
 <script src="index.js"></script>
